# accel-block

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/esp-idf-lib__i2cdev/: idf_component.yml
components/esp-idf-lib__mcp4725/: .component_hash  CHECKSUMS.json  idf_component.yml
components/esp-idf-lib__mcp4725/examples/default/main/: idf_component.yml
componet/: MCP4725.c  MCP4725.h  mcp4725.c  mcp4725.h
main/: CMakeLists.txt  MCP4725.c  idf_component.yml  main.c
main/ble/: gap.c  gatt_svr.c  gatt_svr.h
py-client/: dac_config.py
